# federated-anomad

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
configs/: demo.yaml  k8s.yaml
data/sample/: logs.txt  metrics.csv
docker/: Dockerfile.server  docker-compose.yml
docs/: architecture.md  threat_model.md
experiments/: README.md
notebooks/: README.md
scripts/: run_federated_demo.py  split_dataset.py
src/fanomad/clients/: client.py
src/fanomad/data/: logs.py  synthetic.py
src/fanomad/models/: factory.py  lstm_ae.py  mlp_ae.py  tiny_transformer.py
src/fanomad/privacy/: dp.py  secure_agg.py
src/fanomad/server/: aggregator.py
src/fanomad/utils/: common.py  metrics.py
tests/: test_import.py  test_synthetic.py
